fix: spacing

--- a/components/Meta.module.css
+++ b/components/Meta.module.css
@@ -1,16 +1,18 @@
 .meta {
     font-family: var(--font-inter);
-    font-size: var(--type-xxs);
+    font-size: var(--type-xs);
     text-transform: uppercase;;
     font-weight: 400;
     display: grid;
     grid-auto-rows: max-content;
-    gap: inherit;
+    gap: var(--type-sm);
     grid-template-columns: repeat(3, 1fr);
 }
 @media screen and (min-width: 50rem) {
     .meta {
-        grid-template-columns: repeat(6, 1fr);
+        font-size: var(--type-xxs);
+        gap: var(--type-xs);
+        grid-template-columns: 1fr 1fr;
     }
 }
 
